<resources>
    <string name="app_name">Mono</string>
    <string name="preferences" translatable="false">com.fiz.mono.ui</string>

    <string name="input">Input</string>
    <string name="calculator">Calculator</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>

    <string-array name="getStarted">
        <item>Continue</item>
        <item>Continue</item>
        <item>Get started</item>
    </string-array>

    <string-array name="header">
        <item>Easy to add new transaction</item>
        <item>Track income and expenses</item>
        <item>Comprehensive Report</item>
    </string-array>

    <string-array name="description">
        <item>We always try to bring the best experience to users. Your transactions are recorded as quickly as possible. You will not have any difficulties when you first use MoNo.</item>
        <item>Details tracking transactions visually with the adding images features bills.</item>
        <item>Supports viewing your balance for monthly, income and expenses, debts, loans as well as reports with category.</item>
    </string-array>

    <string name="pageNumber">%1$d/%2$d</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="add_more">Add more</string>
    <string name="set_pin_password">Set PIN password</string>
    <string name="enter_PIN">Please enter your PIN password to continue.</string>
    <string name="confirm_PIN">Please confirm your PIN password.</string>
    <string name="incorrect_PIN">Password incorrect please try again!</string>
    <string name="remove_PIN">Remove PIN</string>
    <string name="delete_PIN">Delete PIN password to disable this feature.</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="please_input">Please input</string>
    <string name="note">Note</string>

    <string name="month_report">Month Report</string>
    <string name="category_report">Category Report</string>

    <!--Settings-->
    <string name="category">Category</string>
    <string name="currency">Currency</string>
    <string name="PIN_password">PIN password</string>
    <string name="reminder">Reminder</string>
    <string name="dark_mode">Dark mode</string>
    <string name="delete_all_data">Delete All Data</string>

    <string name="remove">Remove</string>

    <string name="add_category">Add Category</string>
    <string name="add">Add</string>
    <string name="category_name">Category name</string>
    <string name="icon">Icon</string>
    <string name="category_edit">Edit Category</string>
    <string name="current_balance">Current balance</string>

    <!--Transaction-->
    <string name="transaction_note" translatable="false">(%s)</string>

    <!--Report-->
    <string name="expense_income">Expense/Income</string>
    <string name="previous_balance">Previous balance</string>
    <string name="all">All</string>

    <!--CategoryName-->
    <string name="bank">Bank</string>
    <string name="food">Food</string>
    <string name="medican">Medicine</string>
    <string name="gym">Gym</string>
    <string name="coffee">Coffee</string>
    <string name="shopping">Shopping</string>
    <string name="cats">Cats</string>
    <string name="party">Party</string>
    <string name="gift">Gift</string>
    <string name="gas">Gas</string>

    <string name="freelance">Freelance</string>
    <string name="salary">Salary</string>
    <string name="bonus">Bonus</string>
    <string name="loan">Loan</string>

    <!--Calendar-->
    <string name="no_transactions">There are no transactions this day</string>
    <string name="monthly">Monthly</string>
    <string name="by_category">Category</string>

    <!--Month-->
    <string-array name="name_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="this_month">This month</string>
    <string name="this_week">This week</string>
    <string name="mono_will_reminder_to_note_transaction_on_this_time_everyday">Mono will reminder to note transaction on this time everyday</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="remove_reminder">Remove Reminder</string>
    <string name="mono_notification_channel_id" translatable="false">mono_channel</string>
    <string name="mono_notification_channel_name" translatable="false">mono</string>
    <string name="notification_title">Mono Reminder</string>


</resources>