<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.CategoryEditFragment">


        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/category_edit"
            android:textAlignment="center"
            android:textAppearance="@style/size16_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/back"
            android:textAlignment="textStart"
            android:textAppearance="@style/size16_color_secondary"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/removeButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/remove"
            android:textAlignment="textEnd"
            android:textAppearance="@style/size16_color_secondary"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expenseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/expense"
            android:textAlignment="textStart"
            android:textAppearance="@style/size14_color_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expenseRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/incomeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseTextView"
            app:spanCount="4"
            tools:itemCount="16"
            tools:listitem="@layout/item_category" />

        <TextView
            android:id="@+id/incomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/income"
            android:textAlignment="textStart"
            android:textAppearance="@style/size14_color_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/incomeRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incomeTextView"
            app:spanCount="4"
            tools:itemCount="16"
            tools:listitem="@layout/item_category" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>