<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textAppearance="@style/size16_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_image_bg"
        android:gravity="center_vertical"
        android:paddingStart="52dp"
        android:text="@string/category"
        android:textAppearance="@style/size16_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <ImageView
        android:id="@+id/categoryIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/category"
        app:layout_constraintBottom_toBottomOf="@+id/categoryTextView"
        app:layout_constraintStart_toStartOf="@+id/categoryTextView"
        app:layout_constraintTop_toTopOf="@+id/categoryTextView"
        app:tint="?attr/colorPrimary"
        tools:srcCompat="@drawable/category" />

    <ImageView
        android:id="@+id/categoryCircleRightImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/categoryTextView"
        app:layout_constraintEnd_toEndOf="@+id/categoryTextView"
        app:layout_constraintTop_toTopOf="@+id/categoryTextView"
        tools:srcCompat="@drawable/arrow_right" />


    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_image_bg"
        android:gravity="center_vertical"
        android:paddingStart="52dp"
        android:text="@string/currency"
        android:textAppearance="@style/size16_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTextView" />

    <ImageView
        android:id="@+id/currencyIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/currency_circle"
        app:layout_constraintBottom_toBottomOf="@+id/currencyTextView"
        app:layout_constraintStart_toStartOf="@+id/currencyTextView"
        app:layout_constraintTop_toTopOf="@+id/currencyTextView"
        tools:srcCompat="@drawable/category" />

    <ImageView
        android:id="@+id/currencyCircleRightImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/currencyTextView"
        app:layout_constraintEnd_toEndOf="@+id/currencyTextView"
        app:layout_constraintTop_toTopOf="@+id/currencyTextView"
        tools:srcCompat="@drawable/arrow_right" />


    <TextView
        android:id="@+id/pinPasswordTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_image_bg"
        android:gravity="center_vertical"
        android:paddingStart="52dp"
        android:text="@string/PIN_password"
        android:textAppearance="@style/size16_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyTextView" />

    <ImageView
        android:id="@+id/pinPasswordIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/lock_key"
        app:layout_constraintBottom_toBottomOf="@+id/pinPasswordTextView"
        app:layout_constraintStart_toStartOf="@+id/pinPasswordTextView"
        app:layout_constraintTop_toTopOf="@+id/pinPasswordTextView"
        tools:srcCompat="@drawable/category" />

    <ImageView
        android:id="@+id/pinPasswordCircleRightImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/pinPasswordTextView"
        app:layout_constraintEnd_toEndOf="@+id/pinPasswordTextView"
        app:layout_constraintTop_toTopOf="@+id/pinPasswordTextView"
        tools:srcCompat="@drawable/arrow_right" />


    <TextView
        android:id="@+id/reminderTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_image_bg"
        android:gravity="center_vertical"
        android:paddingStart="52dp"
        android:text="@string/reminder"
        android:textAppearance="@style/size16_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinPasswordTextView" />

    <ImageView
        android:id="@+id/reminderIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/bell_simple_ringing"
        app:layout_constraintBottom_toBottomOf="@+id/reminderTextView"
        app:layout_constraintStart_toStartOf="@+id/reminderTextView"
        app:layout_constraintTop_toTopOf="@+id/reminderTextView"
        tools:srcCompat="@drawable/category" />

    <ImageView
        android:id="@+id/reminderCircleRightImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/reminderTextView"
        app:layout_constraintEnd_toEndOf="@+id/reminderTextView"
        app:layout_constraintTop_toTopOf="@+id/reminderTextView"
        tools:srcCompat="@drawable/arrow_right" />


    <TextView
        android:id="@+id/modeTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_image_bg"
        android:gravity="center_vertical"
        android:paddingStart="52dp"
        android:text="@string/dark_mode"
        android:textAppearance="@style/size16_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderTextView" />

    <ImageView
        android:id="@+id/modeIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/lock_key"
        app:layout_constraintBottom_toBottomOf="@+id/modeTextView"
        app:layout_constraintStart_toStartOf="@+id/modeTextView"
        app:layout_constraintTop_toTopOf="@+id/modeTextView"
        tools:srcCompat="@drawable/category" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/modeSwitch"
        style="?attr/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:checked="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/modeTextView"
        app:layout_constraintEnd_toEndOf="@+id/modeTextView"
        app:layout_constraintTop_toTopOf="@+id/modeTextView" />


    <TextView
        android:id="@+id/deleteTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_image_bg"
        android:gravity="center_vertical"
        android:paddingStart="52dp"
        android:text="@string/delete_all_data"
        android:textAppearance="@style/size16_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeTextView" />

    <ImageView
        android:id="@+id/deleteIconImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/trash"
        app:layout_constraintBottom_toBottomOf="@+id/deleteTextView"
        app:layout_constraintStart_toStartOf="@+id/deleteTextView"
        app:layout_constraintTop_toTopOf="@+id/deleteTextView"
        tools:srcCompat="@drawable/category" />

</androidx.constraintlayout.widget.ConstraintLayout>