<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.input.InputFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/blue"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextAppearance="@android:style/TextAppearance"
        app:tabTextColor="?attr/colorSecondaryVariant">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />
    </com.google.android.material.tabs.TabLayout>

    <ImageButton
        android:id="@+id/leftDateRangeImageButton"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:background="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


    <TextView
        android:id="@+id/editTextDate"
        style="@style/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="Feb 24, 2022 (Sat)"
        app:layout_constraintEnd_toStartOf="@+id/rightDateRangeImageButton"
        app:layout_constraintStart_toEndOf="@+id/leftDateRangeImageButton"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <ImageButton
        android:id="@+id/rightDateRangeImageButton"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:background="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <TextView
        android:id="@+id/textExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        app:boxBackgroundColor="@null"
        app:boxBackgroundMode="outline"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textExpense"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:inputType="numberDecimal"
            android:paddingStart="60dp"
            android:text="0.00"
            android:textSize="32sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldCur"
        app:boxBackgroundColor="@null"
        app:boxBackgroundMode="outline"
        android:layout_width="44dp"
        android:layout_height="56dp"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusTopStart="8dp"
        android:clipChildren="false"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField"
        app:layout_constraintTop_toBottomOf="@+id/textExpense">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="$"
            android:textSize="32sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/noteInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldCur" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteInputEditText"
        app:boxBackgroundColor="@null"
        app:boxBackgroundMode="outline"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:endIconDrawable="@drawable/camera"
        app:boxStrokeColor="@color/gray"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteInputTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="6dp"
        app:layoutManager=
            "androidx.recyclerview.widget.GridLayoutManager"
        android:clipToPadding="false"
        app:spanCount="4"
        app:layout_constraintBottom_toTopOf="@+id/submitInputButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteInputEditText"
        tools:itemCount="16"
        tools:listitem="@layout/grid_view_item"/>
    <Button
        android:id="@+id/submitInputButton"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>